For 1.20.6
	- Binding of nodes on parse now done in display thread, instead of parsing
	  thread, to get around infrequent bug that would give erratic results.

	- Binding Viewpoints; edge case; if you have only one Viewpoint, and it exists
	  in an Inline, it can now be bound to when changing viewpoint. (spec says
	  automatic binding on load does not happen with inlined nodes)

	- X3D Parser, PROTO invocation errors; potential crash if value on expansion
	  not found has been fixed.

	- X3D Parser, better error discovery and reporting in MF values for integer,
	  floating point, and double values.

	- threading conflict when getting files from plugin or filesystem - resolved.

For 1.20.5
	- GeoLOD initial implementation.

	- EXAMINE mode - tries to determine distance to geometry, not assume distance to 
	  (0,0,0)

	- remove InlineLoadControl - old VRML Geospatial 1.1 node.

	- Filenames with spaces better handled now - some handling bugs fixed.

	- Textures use proxy loads now, rather than always relying on max texture size value.

	- asserts in classic parser now print line/file to stdout and log files (on OSX) when
	  fatal internal errors happen.

	- x3dv files - memory pointer problem (pointer not zeroed) when parsing META, PROFILE, etc.

	- OcclusionCulling; if a Shape was down some Transforms, it might never get displayed, if
	  its' geometry is changing. Reference John Carlsons' waves.x3d.

	- GeoSpatial nodes: GeoViewpoint, GeoLocation, GeoElevationGrid, GeoCoordinate,
	  GeoOrigin, GeoPositionInterpolator, GeoLOD nodes should be pretty stable.

	- Classic VRML parser had difficulties with field replacements on PROTO invocations,
	  if PROTO invocations were nested. 

	- Threading and Javascript. Now, all initialization happens in same thread as 
	  FreeWRL event loops; it has been determined that there were problems with the Javascript
	  interpreters garbage collection as it is not Javascript context-based, thus was